Added pagination for my numerous posts I have over here. Index is html now. Posts word on index page is h3. Commit message has more lines than diff.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 markdown: redcarpet
 pygments: true
 permalink: /:categories/:year/:month/:day/:title
+paginate: 4
+paginate_path: "index:num/"
 
 author:
   name: Marin Vila
