--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,6 @@
 markdown: redcarpet
 pygments: true
-permalink: /:categories/:year/:month/:day/:title
-paginate: 8
-paginate_path: "index:num/"
-
+permalink: /:categories/:title
 author:
   name: Marin Vila
   github: rinmalavi
